--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start:prod": "npm run build && node build/index.js",
-    "build": "tsc --outDir build src/index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
