--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "downlevelIteration": true,
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "outDir": "build"
+  },
+  "include": ["src/**/*"]
 }
