--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "jimp": "^0.16.1",
+    "koa": "^2.13.0",
     "node-fetch": "^2.6.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
