--- a/package.json
+++ b/package.json
@@ -5,18 +5,36 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf build",
+    "test": "npm run build && ava tests/*.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^14.11.2",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "jimp": "^0.16.1",
     "koa": "^2.13.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "@ava/typescript": "^1.1.1",
+    "@types/fs-extra": "^9.0.1",
+    "@types/node": "^14.11.2",
+    "ava": "^3.13.0",
+    "fs-extra": "^9.0.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
+  },
+  "ava": {
+    "typescript": {
+      "extensions": [
+        "ts"
+      ],
+      "rewritePaths": {
+        "tests/": "build/tests/"
+      }
+    }
   }
 }
