--- a/package.json
+++ b/package.json
@@ -8,21 +8,18 @@
     "test": "npm run build && ava tests/*.ts"
   },
   "dependencies": {
-    "discord.js": "^12.3.1",
-    "dotenv": "^8.2.0",
-    "jimp": "^0.16.1",
-    "koa": "^2.13.0",
-    "node-fetch": "^2.6.1"
+    "discord.js": "^14.9.0",
+    "dotenv": "^16.0.3",
+    "jimp": "^0.22.7",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@ava/typescript": "^1.1.1",
-    "@types/fs-extra": "^9.0.1",
-    "@types/node": "^14.11.2",
-    "ava": "^3.13.0",
-    "fs-extra": "^9.0.1",
-    "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "@ava/typescript": "^4.0.0",
+    "@types/node": "^18.15.11",
+    "@vercel/node": "^2.10.2",
+    "ava": "^5.2.0",
+    "rimraf": "^4.4.1",
+    "typescript": "^5.0.3"
   },
   "ava": {
     "typescript": {
@@ -31,7 +28,8 @@
       ],
       "rewritePaths": {
         "tests/": "build/tests/"
-      }
+      },
+      "compile": false
     }
   }
 }
